# taskshep

./: .gitignore  Cargo.toml
docs/: sample_tasks.yaml
src/: config.rs  main.rs
src/scheduler/: mod.rs  types.rs
src/tasks/: manager.rs  mod.rs  task_definition.rs
