[package]
name = "taskshep"
version = "0.1.0"
authors = ["Serg <1899416+tasmanianfox@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
shlex = "1.1.0"